// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zeus compiler jsx transform > compiles For 1`] = `
"import { mountFor as _mountFor, insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<ul><!></ul>\`),
  _tmpl$2 = /*#__PURE__*/_template(\`<li><!>:<!></li>\`);
import { For } from '@zeus-js/runtime-dom';
const App = (props: {
  items: string[];
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _for$ = _el$.firstChild;
  _mountFor(_el$, _for$, () => props.items, undefined, (item, index) => (() => {
    const _el$2 = _tmpl$2().firstChild;
    const _anchor$ = _el$2.firstChild;
    const _anchor$2 = _anchor$.nextSibling;
    const _text$ = document.createTextNode("");
    _insert(_el$2, _text$, _anchor$);
    _bindText(_text$, () => index);
    const _text$2 = document.createTextNode("");
    _insert(_el$2, _text$2, _anchor$2);
    _bindText(_text$2, () => item);
    return _el$2;
  })());
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles Host as no-op wrapper 1`] = `
"import { Host as _Host, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div>hello</div>\`);
import { Host } from '@zeus-js/runtime-dom';
const App = () => (() => {
  _Host({});
  return _tmpl$().firstChild;
})();"
`;

exports[`zeus compiler jsx transform > compiles Show with fallback 1`] = `
"import { mountShow as _mountShow, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!></div>\`),
  _tmpl$2 = /*#__PURE__*/_template(\`<span>visible</span>\`),
  _tmpl$3 = /*#__PURE__*/_template(\`<span>hidden</span>\`);
import { Show } from '@zeus-js/runtime-dom';
const App = (props: {
  visible: boolean;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _show$ = _el$.firstChild;
  _mountShow(_el$, _show$, () => props.visible, () => _tmpl$2().firstChild, () => _tmpl$3().firstChild);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles Slot to createSlot 1`] = `
"import { Host as _Host, createSlot as _createSlot, insert as _insert, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<article><!><!></article>\`),
  _tmpl$2 = /*#__PURE__*/_template(\`<button>fallback</button>\`);
import { Host, Slot } from '@zeus-js/runtime-dom';
const App = () => (() => {
  _Host({});
  return (() => {
    const _el$ = _tmpl$().firstChild;
    const _slot$ = _el$.firstChild;
    const _slot$2 = _slot$.nextSibling;
    _insert(_el$, _createSlot(undefined, undefined), _slot$);
    _insert(_el$, _createSlot("footer", () => _tmpl$2().firstChild), _slot$2);
    return _el$;
  })();
})();"
`;

exports[`zeus compiler jsx transform > compiles component usage 1`] = `
"import { insert as _insert, bindText as _bindText, createComponent as _createComponent, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<h1><!></h1>\`);
function MyComponent(props: {
  title: string;
}) {
  return (() => {
    const _el$ = _tmpl$().firstChild;
    const _anchor$ = _el$.firstChild;
    const _text$ = document.createTextNode("");
    _insert(_el$, _text$, _anchor$);
    _bindText(_text$, () => props.title);
    return _el$;
  })();
}
const App = () => _createComponent(MyComponent, {
  title: "hello"
});"
`;

exports[`zeus compiler jsx transform > compiles continuous dynamic nodes with anchors declared before insert 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!><!><!></div>\`);
const App = (props: {
  a: string;
  b: string;
  c: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _anchor$ = _el$.firstChild;
  const _anchor$2 = _anchor$.nextSibling;
  const _anchor$3 = _anchor$2.nextSibling;
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _anchor$);
  _bindText(_text$, () => props.a);
  const _text$2 = document.createTextNode("");
  _insert(_el$, _text$2, _anchor$2);
  _bindText(_text$2, () => props.b);
  const _text$3 = document.createTextNode("");
  _insert(_el$, _text$3, _anchor$3);
  _bindText(_text$3, () => props.c);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles counter with static card structure around dynamic content 1`] = `
"import { insert as _insert, bindText as _bindText, bindEvent as _bindEvent, template as _template, delegateEvents as _delegateEvents } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div class="card"><h1>Counter</h1><div class="count"><!></div><div class="buttons"><button>-</button><button>+</button></div></div>\`, true, false, false);
function Counter() {
  const count = state(0);
  return (() => {
    const _el$ = _tmpl$().firstChild;
    const _el$2 = _el$.firstChild;
    const _el$3 = _el$2.nextSibling;
    const _anchor$ = _el$3.firstChild;
    const _el$4 = _el$3.nextSibling;
    const _el$5 = _el$4.firstChild;
    const _el$6 = _el$5.nextSibling;
    const _text$ = document.createTextNode("");
    _insert(_el$3, _text$, _anchor$);
    _bindText(_text$, () => count.value);
    _bindEvent(_el$5, "click", () => count.value--);
    _bindEvent(_el$6, "click", () => count.value++);
    return _el$;
  })();
}
_delegateEvents(["click"]);"
`;

exports[`zeus compiler jsx transform > compiles dynamic child before static element 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!><span></span></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _anchor$ = _el$.firstChild;
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _anchor$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles dynamic class, style, attr, prop, event 1`] = `
"import { bindClass as _bindClass, bindStyle as _bindStyle, bindAttr as _bindAttr, bindProp as _bindProp, bindEvent as _bindEvent, template as _template, delegateEvents as _delegateEvents } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<input>\`);
const App = () => {
  const user = state({
    name: 'Zeus',
    active: true,
    width: 100
  });
  return (() => {
    const _el$ = _tmpl$().firstChild;
    _bindClass(_el$, () => ({
      active: user.active
    }));
    _bindStyle(_el$, () => ({
      width: user.width
    }));
    _bindAttr(_el$, "title", () => user.name);
    _bindProp(_el$, "value", () => user.name);
    _bindEvent(_el$, "input", e => user.name = e.currentTarget.value);
    return _el$;
  })();
};
_delegateEvents(["input"]);"
`;

exports[`zeus compiler jsx transform > compiles dynamic className as bindClass 1`] = `
"import { bindClass as _bindClass, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div></div>\`);
const App = (props: {
  className: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  _bindClass(_el$, () => props.className);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles dynamic component props as getters 1`] = `
"import { insert as _insert, bindText as _bindText, createComponent as _createComponent, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<h1><!></h1>\`);
function Title(props: {
  name: string;
}) {
  return (() => {
    const _el$ = _tmpl$().firstChild;
    const _anchor$ = _el$.firstChild;
    const _text$ = document.createTextNode("");
    _insert(_el$, _text$, _anchor$);
    _bindText(_text$, () => props.name);
    return _el$;
  })();
}
const App = () => {
  const user = state({
    name: 'Zeus'
  });
  return _createComponent(Title, {
    get name() {
      return user.name;
    }
  });
};"
`;

exports[`zeus compiler jsx transform > compiles dynamic text child 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _anchor$ = _el$.firstChild;
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _anchor$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles dynamic text in raw text elements without markers 1`] = `
"import { bindTextContent as _bindTextContent, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<style></style>\`);
const App = (props: {
  color: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _anchor$ = _el$.firstChild;
  _bindTextContent(_el$, () => \`.count { color: \${props.color}; }\`);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles element ref with callback 1`] = `
"import { bindRef as _bindRef, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div></div>\`);
const App = () => {
  const onMount = (el: HTMLDivElement) => {
    console.log(el);
  };
  return (() => {
    const _el$ = _tmpl$().firstChild;
    _bindRef(_el$, onMount);
    return _el$;
  })();
};"
`;

exports[`zeus compiler jsx transform > compiles element ref with object current 1`] = `
"import { bindRef as _bindRef, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div></div>\`);
const App = () => {
  const el = {
    current: null as HTMLDivElement | null
  };
  return (() => {
    const _el$ = _tmpl$().firstChild;
    _bindRef(_el$, el);
    return _el$;
  })();
};"
`;

exports[`zeus compiler jsx transform > compiles element ref with state 1`] = `
"import { bindRef as _bindRef, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<input>\`);
const App = () => {
  const input = state<HTMLInputElement | null>(null);
  return (() => {
    const _el$ = _tmpl$().firstChild;
    _bindRef(_el$, input);
    return _el$;
  })();
};"
`;

exports[`zeus compiler jsx transform > compiles multiple dynamic children before static element 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!><!><span></span></div>\`);
const App = (props: {
  first: string;
  second: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _anchor$ = _el$.firstChild;
  const _anchor$2 = _anchor$.nextSibling;
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _anchor$);
  _bindText(_text$, () => props.first);
  const _text$2 = document.createTextNode("");
  _insert(_el$, _text$2, _anchor$2);
  _bindText(_text$2, () => props.second);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles nested component usage 1`] = `
"import { insert as _insert, bindText as _bindText, mountShow as _mountShow, createComponent as _createComponent, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div class="component"><h1><!></h1><!></div>\`),
  _tmpl$2 = /*#__PURE__*/_template(\`<span>Count:<!></span>\`),
  _tmpl$3 = /*#__PURE__*/_template(\`<div><!><!></div>\`);
import { Show } from '@zeus-js/runtime-dom';
interface Props {
  title: string;
  count?: number;
}
export function MyComponent(props: Props) {
  return (() => {
    const _el$ = _tmpl$().firstChild;
    const _el$2 = _el$.firstChild;
    const _anchor$ = _el$2.firstChild;
    const _show$ = _el$2.nextSibling;
    const _text$ = document.createTextNode("");
    _insert(_el$2, _text$, _anchor$);
    _bindText(_text$, () => props.title);
    _mountShow(_el$, _show$, () => props.count !== undefined, () => (() => {
      const _el$3 = _tmpl$2().firstChild;
      const _anchor$2 = _el$3.childNodes[1];
      const _text$2 = document.createTextNode("");
      _insert(_el$3, _text$2, _anchor$2);
      _bindText(_text$2, () => props.count);
      return _el$3;
    })(), undefined);
    return _el$;
  })();
}
export function ParentComponent() {
  return (() => {
    const _el$4 = _tmpl$3().firstChild;
    const _cmp$ = _el$4.firstChild;
    const _cmp$2 = _cmp$.nextSibling;
    _insert(_el$4, _createComponent(MyComponent, {
      title: "Hello"
    }), _cmp$);
    _insert(_el$4, _createComponent(MyComponent, {
      title: "World",
      count: 5
    }), _cmp$2);
    return _el$4;
  })();
}"
`;

exports[`zeus compiler jsx transform > compiles static element 1`] = `
"import { template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div>hello</div>\`);
const App = () => _tmpl$().firstChild;"
`;

exports[`zeus compiler jsx transform > compiles static element before dynamic child 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><span></span><!></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _el$.firstChild;
  const _anchor$ = _el$2.nextSibling;
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _anchor$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles static elements around dynamic child 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><span></span><!><b></b></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _el$.firstChild;
  const _anchor$ = _el$2.nextSibling;
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _anchor$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles static text node before dynamic text 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div>hello<!></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _anchor$ = _el$.childNodes[1];
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _anchor$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > declares element variable for deeply nested FirstChild 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><section><span><!></span></section></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _el$.firstChild;
  const _el$3 = _el$2.firstChild;
  const _anchor$ = _el$3.firstChild;
  const _text$ = document.createTextNode("");
  _insert(_el$3, _text$, _anchor$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > declares element variable when domPath is Child with dynamic content before static 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!><span></span></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _anchor$ = _el$.firstChild;
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _anchor$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > declares element variable when domPath is Child with multiple dynamics before static 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!><!><span></span></div>\`);
const App = (props: {
  first: string;
  second: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _anchor$ = _el$.firstChild;
  const _anchor$2 = _anchor$.nextSibling;
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _anchor$);
  _bindText(_text$, () => props.first);
  const _text$2 = document.createTextNode("");
  _insert(_el$, _text$2, _anchor$2);
  _bindText(_text$2, () => props.second);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > declares element variable when domPath is FirstChild 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><span><!></span></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _el$.firstChild;
  const _anchor$ = _el$2.firstChild;
  const _text$ = document.createTextNode("");
  _insert(_el$2, _text$, _anchor$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > declares element variable when static elements surround dynamic child 1`] = `
"import { insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><span></span><!><b></b></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _el$.firstChild;
  const _anchor$ = _el$2.nextSibling;
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _anchor$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > normalizes static className to class in template 1`] = `
"import { template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div class="box">hello</div>\`);
const App = () => _tmpl$().firstChild;"
`;
